# banner

./: .gitignore  AUTHORS  COPYING  ChangeLog  Changelog  Makefile.am  Makefile.in  README  README.autoconf  README.md  SECURITY.md  acconfig.h  banner.1  banner.c  banner.h  config.h.in  configure  configure.ac  configure.in  doxyfile  letters.h  mkinstalldirs
.deps/: banner.P
.github/workflows/: build.yml  test-suite.yml
