# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                                                                   #
#            C  E  D  A  R                                          #
#          S O L U T I O N S       "Software done right."           #
#               I  N  C.                                            #
#                                                                   #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                                                                   #
# Copyright (c) 2001 Cedar Solutions, Inc.                          #
# All rights reserved.                                              #
#                                                                   #
# This program is free software; you can redistribute it and/or     #
# modify it under the terms of the GNU General Public License,      #
# Version 2, as published by the Free Software Foundation.          #
#                                                                   #
# This program is distributed in the hope that it will be useful,   #
# but WITHOUT ANY WARRANTY; without even the implied warranty of    #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.              #
#                                                                   #
# Copies of the GNU General Public License are available from       #
# the Free Software Foundation website, http://www.gnu.org/.        #
#                                                                   #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#
# Author   : Kenneth J. Pronovici
# Language : N/A
# Project  : banner
# Package  : N/A
# Revision : $Revision: 1.3 $
# Purpose  : Input to automake for project
#
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

AUTOMAKE_OPTIONS = foreign no-dependencies 
INCLUDES = -I@srcdir@
bin_PROGRAMS = banner
banner_SOURCES = banner.c banner.h letters.h
