# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#
#              C E D A R
#          S O L U T I O N S       "Software done right."
#           S O F T W A R E
#
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#
# Author   : Kenneth J. Pronovici <pronovic@ieee.org>
# Project  : banner
# Revision : $Id: Makefile.am,v 1.6 2003/09/08 22:39:10 pronovic Exp $
# Purpose  : Input to automake for project
#
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

AUTOMAKE_OPTIONS = foreign no-dependencies 
INCLUDES = -I@srcdir@
bin_PROGRAMS = banner
banner_SOURCES = banner.c banner.h letters.h
