## # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#
#              C E D A R
#          S O L U T I O N S       "Software done right."
#           S O F T W A R E
#
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#
# Author   : Kenneth J. Pronovici <pronovic@ieee.org>
# Project  : banner
# Purpose  : Input to automake for project
#
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

AUTOMAKE_OPTIONS = no-dependencies 
AM_CPPFLAGS = -I@srcdir@
bin_PROGRAMS = banner
banner_SOURCES = banner.c letters.h banner.1
man_MANS = banner.1
