dnl #######################################################################
dnl 
dnl  CONFIGURE - Autoconf configuration file for 'banner' program
dnl 
dnl #######################################################################
dnl 
dnl $GNU_Copyright-Start$
dnl 
dnl Copyright (C) 1998 Kenneth J. Pronovici
dnl
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU General Public License
dnl as published by the Free Software Foundation; either version 2
dnl of the License, or (at your option) any later version.
dnl 
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
dnl 
dnl $GNU_Copyright-End$
dnl 
dnl $Id: configure.in,v 1.1 2001/08/30 21:46:44 pronovic Exp $
dnl 
dnl #######################################################################

dnl Process this file with autoconf to produce a configure script.
AC_INIT(banner.c)
AM_INIT_AUTOMAKE(banner, 1.2)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_STDC

dnl Output these files
AC_OUTPUT(Makefile)
